--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,12 +8,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="../src/index.css">
    
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
     
   </body>
+  <script src="../src/index.js"></script>
+
 </html>
