--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,5 +16,23 @@
   <div id="root"></div>
 
 </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="stylesheet" href="../src/index.css">
+
+    <title>React App</title>
+  </head>
+  <body>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+    <div id="root"></div>
+
+  </body>
+  <script src="../src/index.js"></script>
 
 </html>
