--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     />
     <link rel="stylesheet" href="../src/index.css">
 
-    <title>React App</title>
+    <title>Gymkhana Website</title>
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
